Main Feature. Implemented execute function which can call som shell commands on remote host.

--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,9 @@ MONITOR_ENABLED=true
 MONITOR_ROUTE=/monitor
 MONITOR_USERNAME=admin
 MONITOR_PASSWORD=1234
+
+#
+# Keyfiles
+#
+PRIVATE_KEY=ssh_keys/id_rsa
+PUBLIC_KEY=ssh_keys/id_rsa.pub
