--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jsonfile": "5.0.0",
     "microframework-w3tec": "^0.6.3",
     "morgan": "^1.9.0",
+    "node-ssh": "^6.0.0",
     "nodemon": "^1.12.1",
     "nps": "^5.7.1",
     "nps-utils": "^1.5.0",
@@ -67,6 +68,7 @@
     "reflect-metadata": "^0.1.10",
     "routing-controllers": "^0.7.6",
     "serve-favicon": "^2.4.5",
+    "ssh2": "^0.8.4",
     "supertest": "^3.0.0",
     "swagger-ui-express": "4.0.1",
     "ts-node": "7.0.1",
@@ -111,6 +113,7 @@
     "@types/nock": "^9.1.3",
     "@types/reflect-metadata": "0.1.0",
     "@types/serve-favicon": "^2.2.29",
+    "@types/ssh2": "^0.5.38",
     "@types/supertest": "^2.0.4",
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.7",
